--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,33 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.wrapper {
+  display: flex;
+  flex-direction: row;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.dice1, .dice2, .dicebarb {
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  border-radius: 20px;
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-title {
-  font-size: 1.5em;
+.dice1 {
+  background-color: yellow;
 }
 
-.App-intro {
-  font-size: large;
+.dice2 {
+  background-color: red;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.dicebarb > span {
+  font-size: 14 px;
+}
+.dice1 > span, .dice2 > span {
+  font-size: 24px;
 }
