--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,20 @@
 .dice1 > span, .dice2 > span {
   font-size: 24px;
 }
+
+.resetbarb {
+  border: 1px solid black;
+ margin-top: 30px;
+ height: 50px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
+.clicktarget {
+  height: 500px;
+}
+
+.barbarianstate {
+  font-size: 48px;
+}
